--- a/samconfig.toml
+++ b/samconfig.toml
@@ -15,13 +15,14 @@ lint = true
 [default.deploy.parameters]
 capabilities = "CAPABILITY_IAM"
 confirm_changeset = true
+disable_rollback = false
 resolve_s3 = false
 resolve_image_repos = false
-s3_prefix = "sam-app"
+s3_prefix = "sam-app-hello-world"
 region = "ap-northeast-1"
 
 [default.package.parameters]
-resolve_s3 = true
+resolve_s3 = false
 
 [default.sync.parameters]
 watch = true
